tests/ui/traits/negative-bounds/simple.stderr
error[E0277]: the trait bound `T: !Copy` is not satisfied
  --> $DIR/simple.rs:10:16
   |
LL |     not_copy::<T>();
   |                ^ the trait bound `T: !Copy` is not satisfied
   |
note: required by a bound in `not_copy`
  --> $DIR/simple.rs:3:16
   |
LL | fn not_copy<T: !Copy>() {}
   |                ^^^^^ required by this bound in `not_copy`

error[E0277]: the trait bound `T: !Copy` is not satisfied
  --> $DIR/simple.rs:15:16
   |
LL |     not_copy::<T>();
   |                ^ the trait bound `T: !Copy` is not satisfied
   |
note: required by a bound in `not_copy`
  --> $DIR/simple.rs:3:16
   |
LL | fn not_copy<T: !Copy>() {}
   |                ^^^^^ required by this bound in `not_copy`

error[E0277]: the trait bound `Copyable: !Copy` is not satisfied
  --> $DIR/simple.rs:30:16
   |
LL |     not_copy::<Copyable>();
   |                ^^^^^^^^ the trait bound `Copyable: !Copy` is not satisfied
   |
   = help: the trait `Copy` is implemented for `Copyable`
note: required by a bound in `not_copy`
  --> $DIR/simple.rs:3:16
   |
LL | fn not_copy<T: !Copy>() {}
   |                ^^^^^ required by this bound in `not_copy`
help: consider annotating `Copyable` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct Copyable;
   |

error[E0277]: the trait bound `NotNecessarilyCopyable: !Copy` is not satisfied
  --> $DIR/simple.rs:37:16
   |
LL |     not_copy::<NotNecessarilyCopyable>();
   |                ^^^^^^^^^^^^^^^^^^^^^^ the trait bound `NotNecessarilyCopyable: !Copy` is not satisfied
   |
note: required by a bound in `not_copy`
  --> $DIR/simple.rs:3:16
   |
LL | fn not_copy<T: !Copy>() {}
   |                ^^^^^ required by this bound in `not_copy`
help: consider annotating `NotNecessarilyCopyable` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct NotNecessarilyCopyable;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
